Fix contrast for user chat bubble color

--- a/frontend/src/Theme.css
+++ b/frontend/src/Theme.css
@@ -69,7 +69,7 @@
 	--chat-bot-background-colour: #e9feff;
 	--chat-bot-border-colour: #b6ecef;
 	--chat-bot-text-colour: var(--main-text-colour-inverted);
-	--chat-user-background-colour: #009ca5;
+	--chat-user-background-colour: #008484;
 	--chat-user-border-colour: #198b92;
 	--chat-blocked-background-colour: #faebf2;
 	--chat-blocked-border-colour: #c41565;
